--- a/index.html
+++ b/index.html
@@ -1,53 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gecoin - Website Under Construction</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gecoin - 革命的加密货币</title>
   <style>
+    /* CSS 样式 */
     body {
+      background-color: #eaf5e2;
       font-family: Arial, sans-serif;
-      background-color: #eaf3e9;
       margin: 0;
       padding: 0;
+      text-align: center;
+    }
+
+    .container {
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
     }
 
-    .container {
-      text-align: center;
-    }
-
     h1 {
-      font-size: 36px;
+      font-size: 28px;
       font-weight: bold;
-      color: #333;
+      color: #004d00;
       margin-bottom: 20px;
     }
 
     p {
       font-size: 18px;
-      color: #666;
-      margin-bottom: 20px;
-      font-weight: bold;
+      color: #333;
+      margin-bottom: 10px;
     }
 
-    .telegram-link {
-      font-weight: bold;
-      color: blue;
+    .join-button {
+      background-color: #00b300;
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 4px;
+      font-size: 18px;
       text-decoration: none;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Gecoin</h1>
-    <p>Website Under Construction</p >
-    <p>
-      Join our Telegram group:
-      <a class="telegram-link" href=" ">t.me/GeCoinArmy</a >
-    </p >
+    <h1>为加密货币革命站出来！</h1>
+    <p>Gecoin - 一场革命的加密货币</p>
+    <p>与那些跑路、欺诈和割韭菜的项目做斗争！</p>
+    <p>成为9999名白名单中的英雄！</p>
+    <p>一起引领币圈的潮流，席卷全球！</p>
+    <p>加入我们，成为Gecoin的先锋！</p>
+    <p>我们承诺创造公平、透明、充满活力的加密货币社区！</p>
+    <p>通过技术创新和合规运营，为每个持有者带来财富和机会！</p>
+    <p>让我们一起红遍币圈，打破局限，展现真正的力量！</p>
+    <p>成为革命的象征，为加密货币行业发展做出贡献！</p>
+    <a class="join-button" href="https://t.me/GeCoinArmy">加入我们</a>
   </div>
 </body>
 </html>
