--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       height: 100vh;
     }
 
+    .logo {
+      width: 50px;
+      height: 50px;
+      margin-top: 10px;
+    }
+
     h1 {
       font-size: 28px;
       font-weight: bold;
@@ -48,17 +54,16 @@
 </head>
 <body>
   <div class="container">
-    <h1>为加密货币革命站出来！</h1>
-    <p>Gecoin - 一场革命的加密货币</p>
-    <p>与那些跑路、欺诈和割韭菜的项目做斗争！</p>
-    <p>成为9999名白名单中的英雄！</p>
-    <p>一起引领币圈的潮流，席卷全球！</p>
-    <p>加入我们，成为Gecoin的先锋！</p>
-    <p>我们承诺创造公平、透明、充满活力的加密货币社区！</p>
-    <p>通过技术创新和合规运营，为每个持有者带来财富和机会！</p>
-    <p>让我们一起红遍币圈，打破局限，展现真正的力量！</p>
-    <p>成为革命的象征，为加密货币行业发展做出贡献！</p>
-    <a class="join-button" href="https://t.me/GeCoinArmy">加入我们</a>
+    <img class="logo" src="logo.png" alt="Gecoin Logo">
+    <h1>Gecoin - 革命的加密货币</h1>
+    <p>为了迎接加密货币牛市到来，Gecoin，我们不再袖手旁观！这是一个革命性的加密货币，我们将站出来，与那些跑路、欺诈和割韭菜的项目做斗争！</p>
+    <p>就像当年狗币嘲笑比特币一样，我们要引领币圈的潮流，席卷全球！</p>
+    <p>我们需要9999名真正的战友，白名单中的英雄们！让我们与中国的淄博故事那样红遍全网！只要我们团结一致、共同努力，必将在币圈掀起一场革命！</p>
+    <p>我们要向那些欺骗投资者、割韭菜的骗子们发出最强烈的抵制声音！加入我们，成为Gecoin的先锋！</p>
+    <p>我们承诺创造一个公平、透明、充满活力的加密货币社区！我们的目标
+是通过技术创新和合规运营，为每个持有者带来财富和机会！让我们一起红遍币圈吧！只要我们团结在一起，就能够打破局限，展现真正的力量！让Gecoin成为一个革命的象征，为加密货币行业的发展做出我们的贡献。</p>
+<a class="join-button" href="https://t.me/GeCoinArmy" target="_blank">加入我们，一起前进！</a>
+
   </div>
 </body>
 </html>
