--- a/index.html
+++ b/index.html
@@ -1,69 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gecoin - 革命的加密货币</title>
+  <title>Gecoin - Join the Revolution!</title>
   <style>
-    /* CSS 样式 */
     body {
-      background-color: #eaf5e2;
+      background-color: #eaf7ef;
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
       text-align: center;
     }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
     .logo {
-      width: 50px;
-      height: 50px;
-      margin-top: 10px;
-    }
+  width: 200px;
+  margin: 50px auto;
+}
 
-    h1 {
-      font-size: 28px;
-      font-weight: bold;
-      color: #004d00;
-      margin-bottom: 20px;
-    }
+h1 {
+  color: #006d54;
+  font-size: 24px;
+  font-weight: bold;
+}
 
-    p {
-      font-size: 18px;
-      color: #333;
-      margin-bottom: 10px;
-    }
+p {
+  color: #333;
+  font-size: 18px;
+  line-height: 1.5;
+  margin: 20px auto;
+  max-width: 600px;
+}
 
-    .join-button {
-      background-color: #00b300;
-      color: #fff;
-      padding: 10px 20px;
-      border-radius: 4px;
-      font-size: 18px;
-      text-decoration: none;
-      margin-top: 20px;
-    }
-  </style>
+.join-button {
+  display: inline-block;
+  padding: 12px 24px;
+  background-color: #006d54;
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.join-button:hover {
+  background-color: #004639;
+}
+</style>
 </head>
 <body>
-  <div class="container">
-    <img class="logo" src="logo.png" alt="Gecoin Logo">
-    <h1>Gecoin - 革命的加密货币</h1>
-    <p>为了迎接加密货币牛市到来，Gecoin，我们不再袖手旁观！这是一个革命性的加密货币，我们将站出来，与那些跑路、欺诈和割韭菜的项目做斗争！</p>
-    <p>就像当年狗币嘲笑比特币一样，我们要引领币圈的潮流，席卷全球！</p>
-    <p>我们需要9999名真正的战友，白名单中的英雄们！让我们与中国的淄博故事那样红遍全网！只要我们团结一致、共同努力，必将在币圈掀起一场革命！</p>
-    <p>我们要向那些欺骗投资者、割韭菜的骗子们发出最强烈的抵制声音！加入我们，成为Gecoin的先锋！</p>
-    <p>我们承诺创造一个公平、透明、充满活力的加密货币社区！我们的目标
-是通过技术创新和合规运营，为每个持有者带来财富和机会！让我们一起红遍币圈吧！只要我们团结在一起，就能够打破局限，展现真正的力量！让Gecoin成为一个革命的象征，为加密货币行业的发展做出我们的贡献。</p>
-<a class="join-button" href="https://t.me/GeCoinArmy" target="_blank">加入我们，一起前进！</a>
-
-  </div>
+  <img class="logo" src="logo.png" alt="Gecoin Logo">
+  <h1>Welcome to Gecoin</h1>
+  <p>Get ready for the upcoming cryptocurrency bull market. Gecoin is here to revolutionize the industry. We will stand up against scams and projects that deceive and exploit investors, just like Dogecoin once mocked Bitcoin. Join us and be part of the wave that sweeps the crypto community globally.</p>
+  <p>We need 9,999 true comrades, the heroes in our whitelist! Let's make our story as viral as the Zibo incident in China. Together, we will ignite a revolution in the cryptocurrency market. We will raise our voices against those who deceive and exploit investors with the strongest resistance.</p>
+   <p>Join us as a pioneer of Gecoin! We are committed to creating a fair, transparent, and vibrant cryptocurrency community. Our goal is to bring wealth and opportunities to every holder through technological innovation and compliant operations.</p>
+  <p>Let's make Gecoin the talk of the crypto world! Together, we can break the limitations and unleash our true power. Let's become a symbol of revolution and contribute to the development of the cryptocurrency industry.</p>
+  <a class="join-button" href="https://t.me/GeCoinArmy" target="_blank">Join us and let's move forward!</a>
 </body>
 </html>
