--- a/index.html
+++ b/index.html
@@ -7,49 +7,53 @@
     body {
       background-color: #eaf7ef;
       font-family: Arial, sans-serif;
-      text-align: center;
     }
+
     .logo {
-  width: 200px;
-  margin: 50px auto;
-}
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 100px;
+    }
 
-h1 {
-  color: #006d54;
-  font-size: 24px;
-  font-weight: bold;
-}
+    h1 {
+      color: #006d54;
+      font-size: 24px;
+      font-weight: bold;
+      text-align: left;
+    }
 
-p {
-  color: #333;
-  font-size: 18px;
-  line-height: 1.5;
-  margin: 20px auto;
-  max-width: 600px;
-}
+    p {
+      color: #333;
+      font-size: 18px;
+      line-height: 1.5;
+      max-width: 600px;
+      margin: 20px;
+      text-align: left;
+    }
 
-.join-button {
-  display: inline-block;
-  padding: 12px 24px;
-  background-color: #006d54;
-  color: #fff;
-  font-size: 18px;
-  text-decoration: none;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
-}
+    .join-button {
+      display: inline-block;
+      padding: 12px 24px;
+      background-color: #006d54;
+      color: #fff;
+      font-size: 18px;
+      text-decoration: none;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
+    }
 
-.join-button:hover {
-  background-color: #004639;
-}
-</style>
+    .join-button:hover {
+      background-color: #004639;
+    }
+  </style>
 </head>
 <body>
   <img class="logo" src="logo.png" alt="Gecoin Logo">
   <h1>Welcome to Gecoin</h1>
   <p>Get ready for the upcoming cryptocurrency bull market. Gecoin is here to revolutionize the industry. We will stand up against scams and projects that deceive and exploit investors, just like Dogecoin once mocked Bitcoin. Join us and be part of the wave that sweeps the crypto community globally.</p>
   <p>We need 9,999 true comrades, the heroes in our whitelist! Let's make our story as viral as the Zibo incident in China. Together, we will ignite a revolution in the cryptocurrency market. We will raise our voices against those who deceive and exploit investors with the strongest resistance.</p>
-   <p>Join us as a pioneer of Gecoin! We are committed to creating a fair, transparent, and vibrant cryptocurrency community. Our goal is to bring wealth and opportunities to every holder through technological innovation and compliant operations.</p>
+  <p>Join us as a pioneer of Gecoin! We are committed to creating a fair, transparent, and vibrant cryptocurrency community. Our goal is to bring wealth and opportunities to every holder through technological innovation and compliant operations.</p>
   <p>Let's make Gecoin the talk of the crypto world! Together, we can break the limitations and unleash our true power. Let's become a symbol of revolution and contribute to the development of the cryptocurrency industry.</p>
   <a class="join-button" href="https://t.me/GeCoinArmy" target="_blank">Join us and let's move forward!</a>
 </body>
