--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     body {
       background-color: #eaf7ef;
       font-family: Arial, sans-serif;
+      padding: 20px;
     }
 
     .logo {
@@ -20,15 +21,12 @@
       color: #006d54;
       font-size: 24px;
       font-weight: bold;
-      text-align: left;
     }
 
     p {
       color: #333;
       font-size: 18px;
       line-height: 1.5;
-      max-width: 600px;
-      margin: 20px;
       text-align: left;
     }
 
