--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
                       BlockGuardian
                     </h1>
                     <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
+                      Gecoin旨在彻底改变行业，BLOCKGUARDIAN 区块链守护者，我们坚决反对欺骗和剥削投资者的骗局，加入我们，成为席卷全球的区块链守护着。我们需要9999名真正的战友！#Gecoin #加密货币革命者！
                     </p>
-                    <div class="btn-box">
+                    <p>
+                      9999名白名单总计空投：99,990,000,000， 每位战士10,000,000 GECOIN
+                    </p>
+                      <div class="btn-box">
                       <a href="https://app.uniswap.org/#/swap/"  target="_blank" class="btn1">
                         立即购买
                       </a>
@@ -210,7 +213,7 @@
            以太链合约：xxxxxxxxxxxxxxxxxxxxxxxx
           </p>
           <p>
-          总量：2100,000,000,000
+          总量：205,000,000,000
           </p>
         </div>
         <div class="row">
@@ -224,10 +227,7 @@
                   添加流动性
                 </h5>
                 <p>
-                  50%
-                </p>
-                <p>
-                  添加 Uniswap 1100,000,000,000
+                  添加 Uniswap 100,000,000,000
                 </p>
                 <!-- <a href=""> 
                   Read More
@@ -245,10 +245,7 @@
                   团队预留
                 </h5>
                 <p>
-                  预留10%GECOIN
-                </p>
-                <p>
-                  21,000,000,000
+                  5,010,000,000
                 </p>
                 <!-- <a href=""> 
                   Read More
@@ -266,7 +263,7 @@
                   买卖税
                 </h5>
                 <p>
-                 买和卖各收1%税，用于后期运营。
+                 买卖1%税。
                 </p>
                 <!-- <a href="">
                   Read More
@@ -293,10 +290,10 @@
     <div class="container  ">
       <div class="heading_container heading_center">
         <h2>
-          About <span>Us</span>
+          <span>GECOIN</span>
         </h2>
         <p>
-        描述
+        区块链守护者
         </p>
       </div>
       <div class="row">
@@ -308,10 +305,10 @@
         <div class="col-md-6">
           <div class="detail-box">
             <h3>
-              标题
+              使命
             </h3>
             <p>
-              描述
+              欢迎加入区块链守护者，有幸成为白名单战士，将会拥有1000万代币。
             </p>
             <p>
               描述
