--- a/index.html
+++ b/index.html
@@ -754,13 +754,13 @@
   
   <section class="footer_section">
     <a href=" https://twitter.com/gecoin_network/" target="_blank">
-      <img src="images/twitter.png" alt="Twitter" width="32" height="32">
+      <img src="images/twitter.png" alt="Twitter" width="64" height="64">
     </a >
     
-    <span>&nbsp;</span> <!-- 在图标之间添加一些空白间距 -->
+    <span>&nbsp;&nbsp;</span> <!-- 在图标之间添加一些空白间距 -->
     
     <a href="https://t.me/GeCoinArmy/" target="_blank">
-      <img src="images/telegram.png" alt="Telegram" width="32" height="32">
+      <img src="images/telegram.png" alt="Telegram" width="58" height="58">
     </a >
 
     <div class="container">
