--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@
                 <div class="col-md-6 ">
                   <div class="detail-box">
                     <h1>
-                      Gecoin <br>
-                      BlockGuardian
+                      Gecoin是反割联盟的治理代币
                     </h1>
                     <p>
-                      Gecoin旨在彻底改变行业，BLOCKGUARDIAN 区块链守护者，我们坚决反对欺骗和剥削投资者的骗局，加入我们，成为席卷全球的区块链守护着。我们需要9999名真正的战友！#Gecoin #加密货币革命者！
+                      Gecoin旨在彻底改变行业，反割联盟是区块链守护者，我们坚决反对欺骗和剥削投资者的骗局，加入我们，成为席卷全球的反割联盟区块链守护着。我们需要9999名真正的白名单战友！#Gecoin #加密货币革命者！
                     </p>
                     <p>
                       9999名白名单总计空投：99,990,000,000， 每位战士10,000,000 GECOIN
@@ -310,9 +309,7 @@
             <p>
               欢迎加入区块链守护者，有幸成为白名单战士，将会拥有1000万代币。
             </p>
-            <p>
-              描述
-             </p>
+            
             <a href="https://t.me/GeCoinArmy/" target="_blank" class="btn1">
               Telegram
             </a>
@@ -346,7 +343,7 @@
               第一阶段
             </h5>
             <p>
-            描述
+            规划中
             </p>
           </div>
         </div>
@@ -359,7 +356,7 @@
               第二阶段
             </h5>
             <p>
-            描述
+              规划中
             </p>
           </div>
         </div>
@@ -372,7 +369,7 @@
              第三阶段
             </h5>
             <p>
-              描述
+              规划中
             </p>
           </div>
         </div>
@@ -385,7 +382,7 @@
               第四阶段
             </h5>
             <p>
-             描述
+              规划中
             </p>
           </div>
         </div>
