--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PATO</title>
+  <title>PATO/title>
   <link rel="shortcut icon" href="images/favicon.png" type="">
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+    }
 
+    h1, h2 {
+      text-align: center;
+    }
+
+    .login-button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h1>网站建设中</h1>
+  <h1>欢迎登录</h1>
   
-  <h2>加入以下社区：</h2>
+  <h2>使用以下方式登录：</h2>
   
-  <a href="https://t.me/patocn/ ">
-    < img src="images/telegram.png" alt="Telegram" width="150" height="150">
-  </a >
+  <div class="login-button">
+    <a href="https://t.me/patocn/">
+      < img src="images/telegram.png" alt="Telegram" width="150" height="150">
+    </a >
+  </div>
   
-  <a href="https://twitter.com/pato_Coin/">
-    < img src="images/twitter.png" alt="Twitter" width="150" height="150">
-  </a >
+  <div class="login-button">
+    <a href="https://twitter.com/pato_Coin/">
+      < img src="images/twitter.png" alt="Twitter" width="150" height="150">
+    </a >
+  </div>
 </body>
 </html>
+
+
+
