--- a/index.html
+++ b/index.html
@@ -27,21 +27,23 @@
   </style>
 </head>
 <body>
-  <h1>欢迎登录</h1>
+  <h1>网站建设中</h1>
   
   <h2>使用以下方式登录：</h2>
   
-  <div class="login-button">
-    <a href="https://t.me/patocn/">
-      < img src="images/telegram.png" alt="Telegram" width="150" height="150">
-    </a >
-  </div>
+   <div class="login-button">
+     <a href=" https://twitter.com/pato_Coin/" target="_blank">
+      <img src="images/twitter.png" alt="Twitter" width="64" height="64">
+     </a >
+    </div>
+    <span>&nbsp;&nbsp;</span> <!-- 在图标之间添加一些空白间距 -->
+    <div class="login-button">
+     <a href="https://t.me/patocn/" target="_blank">
+      <img src="images/telegram.png" alt="Telegram" width="58" height="58">
+     </a >
+    </div>
   
-  <div class="login-button">
-    <a href="https://twitter.com/pato_Coin/">
-      < img src="images/twitter.png" alt="Twitter" width="150" height="150">
-    </a >
-  </div>
+  
 </body>
 </html>
 
