--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                       1 Qcoin=1 Q币
                     </h1>
                     <p>
-                      QCOIN是ARB链上的虚拟货币，将成为MEME文化的领军者。腾讯的Q币深受60至90年代人的喜爱，QCOIN它唤起了这些年代人的回忆和情感。这一代人掌握着70%的财富，人口众多且财富高度集中，QCOIN与Q币高度契合，有望继续扩大市场份额，并受到新一代数字资产爱好者的认可。
+                      Qcoin是ARB链上的虚拟货币，将成为Meme文化的领军者。腾讯的Q币深受60至90年代人的喜爱，Qcoin它唤起了这些年代人的回忆和情感。这一代人掌握着70%的财富，人口众多且财富高度集中，Qcoin与Q币高度契合，有望继续扩大市场份额，并受到新一代数字资产爱好者的认可。
                     </p>
                     <p>
-                      ARB合约地址:&nbsp;&nbsp;0x9288DCCAc990B5549EC2fF24AbC0c3beb2627566
+                      ARB合约地址:&nbsp;0x9288DCCAc990B5549EC2fF24AbC0c3beb2627566
                     </p>
                       <div class="btn-box">
                       <a href="https://app.uniswap.org/#/swap/"  target="_blank" class="btn1">
@@ -208,12 +208,12 @@
           <h2>
           代币经济学
           </h2>
-          <h3>
-          ARB合约地址:&nbsp;&nbsp;0x9288DCCAc990B5549EC2fF24AbC0c3beb2627566
-          </h3>
-          <h4>
+          <p>
           总量：100,000,000,000
-          </h4>
+          </p>
+          <p>
+            ARB合约地址:&nbsp;0x9288DCCAc990B5549EC2fF24AbC0c3beb2627566
+          </p>
         </div>
         <div class="row">
           <div class="col-md-4 ">
@@ -241,7 +241,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                空投＋前期运营 20%
+                空投 20%
                 </h5>
                 <!-- <p> 
                 20,000,000,000
@@ -289,10 +289,10 @@
     <div class="container  ">
       <div class="heading_container heading_center">
         <h2>
-          <span>QCOIN [Q币]</span>
+          <span>QCOIN</span>
         </h2>
         <p>
-          QCOIN 唤醒60至90年代人回忆和情感。这一代人掌握着70%的财富，人口众多且财富高度集中，QCOIN与Q币高度契合，DOGE,SHIB,PEPE,将成为永远的过去，MEME的新宠必然是QCOIN「Q币」。
+          Qcoin 唤醒60至90年代人回忆和情感。这一代人掌握着70%的财富，人口众多且财富高度集中，Qcoin与Q币高度契合，DOGE,SHIB,PEPE,将成为永远的过去，MEME的新宠必然是QCOIN「Q币」。
         </p>
       </div>
       <div class="row">
@@ -330,7 +330,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          路线
+          路线图
         </h2>
       </div>
       <div class="why_container">
@@ -340,7 +340,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              格局大点
+             格局大点
             </h5>
             <p>
             未来搞个去中心化交易所，先打情怀牌，出圈来点实际项目
