--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cn">
 
 <head>
   <!-- Basic -->
@@ -102,10 +102,10 @@
                       1 Qcoin=1 Q币
                     </h1>
                     <p>
-                      Qcoin是ARB链上的虚拟货币，将成为Meme文化的领军者。腾讯的Q币深受60至90年代人的喜爱，Qcoin它唤起了这些年代人的回忆和情感。这一代人掌握着70%的财富，人口众多且财富高度集中，Qcoin与Q币高度契合，有望继续扩大市场份额，并受到新一代数字资产爱好者的认可。
+                      QCOIN是ARB链上的虚拟货币，将成为Meme文化的领军者。腾讯的Q币深受60至90年代人的喜爱，QCOIN它唤起了这些年代人的回忆和情感。这一代人掌握着70%的财富，人口众多且财富高度集中，QCOIN与Q币高度契合，有望继续扩大市场份额，并受到新一代数字资产爱好者的认可。
                     </p>
                     <p>
-                      ARB合约地址:&nbsp;0x9288DCCAc990B5549EC2fF24AbC0c3beb2627566
+                      ARB合约地址:&nbsp;0xD41024Ac6b3a95E897ca94755586D214A541Cc21
                     </p>
                       <div class="btn-box">
                       <a href="https://app.uniswap.org/#/swap/"  target="_blank" class="btn1">
@@ -212,7 +212,7 @@
           总量：100,000,000,000
           </p>
           <p>
-            ARB合约地址:&nbsp;0x9288DCCAc990B5549EC2fF24AbC0c3beb2627566
+            ARB合约:&nbsp;0xD41024Ac6b3a95E897ca94755586D214A541Cc21
           </p>
         </div>
         <div class="row">
@@ -292,7 +292,7 @@
           <span>QCOIN</span>
         </h2>
         <p>
-          Qcoin 唤醒60至90年代人回忆和情感。这一代人掌握着70%的财富，人口众多且财富高度集中，Qcoin与Q币高度契合，DOGE,SHIB,PEPE,将成为永远的过去，MEME的新宠必然是QCOIN「Q币」。
+          QCOIN 唤醒60至90年代人回忆和情感。这一代人掌握着70%的财富，人口众多且财富高度集中，QCOIN与Q币高度契合，DOGE,SHIB,PEPE,将成为永远的过去，MEME的新宠必然是QCOIN「Q币」。
         </p>
       </div>
       <div class="row">
