--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                       QCOIN是ARB链上的虚拟货币，将成为Meme文化的领军者。腾讯的Q币深受60至90年代人的喜爱，QCOIN它唤起了这些年代人的回忆和情感。这一代人掌握着70%的财富，人口众多且财富高度集中，QCOIN与Q币高度契合，有望继续扩大市场份额，并受到新一代数字资产爱好者的认可。
                     </p>
                     <p>
-                      ARB合约地址:&nbsp;0xD41024Ac6b3a95E897ca94755586D214A541Cc21
+                      ARB合约地址:&nbsp;0x7c3b036baade6c2746454f3bc54ba72d4215541b
                     </p>
                       <div class="btn-box">
                       <a href="https://app.uniswap.org/#/swap/"  target="_blank" class="btn1">
@@ -209,10 +209,10 @@
           代币经济学
           </h2>
           <p>
-          总量：100,000,000,000
+          总量：123,000,000,000
           </p>
           <p>
-            ARB合约:&nbsp;0xD41024Ac6b3a95E897ca94755586D214A541Cc21
+            ARB合约:&nbsp;0x7c3b036baade6c2746454f3bc54ba72d4215541b
           </p>
         </div>
         <div class="row">
@@ -223,7 +223,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                添加流动性 80%
+                添加流动性 1000万
                 </h5>
                 <!-- <p>
                 添加 Uniswap  80,000,000,000
@@ -241,7 +241,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                空投 20%
+                空投 230万
                 </h5>
                 <!-- <p> 
                 20,000,000,000
@@ -259,7 +259,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                买卖税 1%
+                买卖税 0
                 </h5>
                 <!--<p>
                 买卖1%税用于后期团队运营。
@@ -340,7 +340,7 @@
           </div>
           <div class="detail-box">
             <h5>
-             格局大点
+             格局大点，0税，只有共识。
             </h5>
             <p>
             未来搞个去中心化交易所，先打情怀牌，出圈来点实际项目
