--- a/index.html
+++ b/index.html
@@ -102,10 +102,7 @@
                       FireCoin
                     </h1>
                     <p>
-                      &nbsp;&nbsp;孙宇晨绰号美名为“孙割”，由于经常割币圈韭菜而得名。这个绰号让我们想到了与他相关的加密货币交易平台——火币（Huobi）。然而，我们的代币是Firecoin[Fire]，我们绝不会割币圈韭菜！相反，我们以炽热的热情和创新精神为代表。
-                    </p>
-                    <p>
-                      &nbsp;&nbsp;现在是行动的时候了，币圈兄弟们！借火币的流量，让我们的Firecoin[Fire]在币圈燃烧起来！不要再被孙割割伤，而是追逐我们的代币，享受真正的热度和机会！加入我们，让Firecoin[Fire]的火焰照亮未来，共同冲向成功！现在就抓住这个机会，感受购买Firecoin[Fire]的快乐！一起点燃你的投资之路！
+                    Firecoin，Arb链上的Meme代币，与孙哥的“孙割”火币同名，Firecoin是币圈韭菜代表方，与孙哥火币打个擂台赛，也是学习他蹭流量策略的实践过程。韭菜们加入Firecoin，探索热点趋势，释放Meme代币的潜力，成为Firecoin的传奇人物！
                     </p>
                     <p>
                       ARB合约地址:&nbsp;xxxxxxxxxxxxx
@@ -295,8 +292,8 @@
           <span>FireCoin</span>
         </h2>
         <p>
-          FireCoinFireCoinFireCoinFireCoinFireCoinFireCoinFireCoin
-        </p>
+        孙宇晨绰号美名为“孙割”，由于经常割币圈韭菜而得名。这个绰号让我们想到了与他相关的加密货币交易平台——火币（Huobi）。然而，我们的代币是Firecoin[Fire]，我们绝不会割币圈韭菜！相反，我们以炽热的热情和创新精神为代表。现在是行动的时候了，币圈兄弟们！借火币的流量，让我们的Firecoin[Fire]在币圈燃烧起来！不要再被孙割割伤，而是追逐我们的代币，享受真正的热度和机会！加入我们，让Firecoin[Fire]的火焰照亮未来，共同冲向成功！现在就抓住这个机会，感受购买Firecoin[Fire]的快乐！一起点燃你的投资之路！
+       </p>
       </div>
       <div class="row">
         <div class="col-md-6 ">
