--- a/index.html
+++ b/index.html
@@ -107,7 +107,13 @@
                     <p>
                       ARB合约地址:&nbsp;xxxxxxxxxxxxx
                     </p>
-                      <div class="btn-box">
+                    <p>
+                      代币符号：Fire
+                    </p>
+                    <p>
+                      代币小数：18
+                    </p>
+                     <div class="btn-box">
                       <a href="https://app.uniswap.org/#/swap/"  target="_blank" class="btn1">
                         立即购买
                       </a>
