--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> FireCoin</title>
+  <title> Niubi</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -50,7 +50,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              FireCoin
+              Niubi
             </span>
           </a>
 
@@ -99,16 +99,16 @@
                 <div class="col-md-6 ">
                   <div class="detail-box">
                     <h1>
-                      FireCoin
+                      Niubi
                     </h1>
                     <p>
-                    Firecoin，Arb链上的Meme代币，与孙哥的“孙割”火币同名，Firecoin是币圈韭菜代表方，与孙哥火币打个擂台赛，也是学习他蹭流量策略的实践过程。韭菜们加入Firecoin，探索热点趋势，释放Meme代币的潜力，成为Firecoin的传奇人物！
-                    </p>
+                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎来到区块链动物城！Niubi代币的世界！Niubi代币以中文口语中"牛逼"的强大含义为名，让我们引入一个令人兴奋的新成员 - Niubi！就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有Niubi的存在！Niubi代表着强大、无与伦比的能力，它是真正的“牛逼”代表。作为Niubi代币的持有者，您将成为这个城市中的动物英雄，共同推动数字货币的发展和创新。无论牛市还是熊市，Niubi代币都将引领潮流，展现真正的“牛逼”力量。加入我们！
+                     </p>
                     <p>
                       ARB合约地址:&nbsp;xxxxxxxxxxxxx
                     </p>
                     <p>
-                      代币符号：Fire
+                      代币符号：Niubi
                     </p>
                     <p>
                       代币小数：18
@@ -119,12 +119,12 @@
                       </a>
                     </div>
                     <div class="btn-box">
-                      <a href="https://t.me/Firecoin_info/" target="_blank" class="btn1">
+                      <a href="https://t.me/Niubi_Official/" target="_blank" class="btn1">
                         Telegram
                       </a>
                     </div>
                     <div class="btn-box">
-                      <a href="https://twitter.com/Firecoin_info/" target="_blank" class="btn1">
+                      <a href="https://twitter.com/Niubi_Official/" target="_blank" class="btn1">
                         Twitter
                       </a>
                     </div>
@@ -202,7 +202,7 @@
 
     </section>
     <!-- end slider section -->
-  </div>
+  </div> 
 
 
   <!-- service section -->
@@ -292,11 +292,11 @@
     <div class="container  ">
       <div class="heading_container heading_center">
         <h2>
-          <span>FireCoin</span>
+          <span>Niubi</span>
         </h2>
         <p>
-        孙宇晨绰号美名为“孙割”，由于经常割币圈韭菜而得名。这个绰号让我们想到了与他相关的加密货币交易平台——火币（Huobi）。然而，我们的代币是Firecoin[Fire]，我们绝不会割币圈韭菜！相反，我们以炽热的热情和创新精神为代表。现在是行动的时候了，币圈兄弟们！借火币的流量，让我们的Firecoin[Fire]在币圈燃烧起来！不要再被孙割割伤，而是追逐我们的代币，享受真正的热度和机会！加入我们，让Firecoin[Fire]的火焰照亮未来，共同冲向成功！现在就抓住这个机会，感受购买Firecoin[Fire]的快乐！一起点燃你的投资之路！
-       </p>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎来到区块链动物城，Niubi代币的世界！Niubi代币以中文口语中"牛逼"同音，中文"牛逼"是强大含义为名，这里是数字金融的奇妙之地！在这个充满活力和创新的城市中，每个角落都有令人瞩目的动物形象，而现在，该城市将迎来一个令人兴奋的新成员 - Niubi！就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有Niubi的存在！Niubi代表着强大、无与伦比的能力，它是区块链动物世界中真正的“牛逼”代表。Niubi的到来为动物城注入了新的活力和魅力。作为区块链动物城的一员，Niubi将与其他动物英雄们并肩作战，共同推动数字货币的发展和创新。Niubi代币将带给您无限的机会和无以伦比的成就感。作为Niubi代币的持有者，您将展现出真正的”牛逼”风采，与华尔街的荣耀相辅相成。在区块链动物城中，Niubi将成为一个象征着强大和稳健的存在。无论是在牛市还是熊市，Niubi代币都将引领数字货币的潮流，展现出真正的“牛逼”力量。加入我们的行列，成为Niubi代币的一员。在区块链动物城中，让我们共同展现我们的“牛逼”，共同创造一个令人瞩目的数字金融世界！
+        </p>
       </div>
       <div class="row">
         <div class="col-md-6 ">
@@ -346,7 +346,7 @@
              第一步
             </h5>
             <p>
-            共识起来，与孙哥打个擂台，先出圈，再规划。
+            共识起来，先出圈，再规划。
             </p>
           </div>
         </div>
@@ -753,12 +753,12 @@
   <!-- footer section -->
   
   <section class="footer_section">
-    <a href="https://t.me/Firecoin_info/" target="_blank">
+    <a href="https://t.me/Niubi_Official/" target="_blank">
       <img src="images/telegram.png" alt="Telegram" width="58" height="58">
     </a >
     
     <span>&nbsp;&nbsp;</span> <!-- 在图标之间添加一些空白间距 -->
-    <a href="https://twitter.com/Firecoin_info/" target="_blank">
+    <a href="https://twitter.com/Niubi_Official/" target="_blank">
       <img src="images/twitter.png" alt="Twitter" width="64" height="64">
     </a >
     
@@ -767,7 +767,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Firecoin</a>
+        <a href="https://html.design/">Niubi</a>
       </p>
     </div>
   </section>
