--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
+              < img src="images/slider-img.png" style="
+    width: 50px;
+    height: 50px;
+">
               Niubi
             </span>
           </a>
