--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Niubi</title>
+  <title> NIUBI</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -54,7 +54,11 @@
                 width: 50px;
                 height: 50px;
                 ">
-              </span>   
+              </span>  
+              <span>
+                NIUBI
+              </span> 
+
           </a>
           
 
@@ -103,22 +107,22 @@
                 <div class="col-md-6 ">
                   <div class="detail-box">
                     <h1>
-                      Niubi
+                      NIUBI
                     </h1>
                     <p>
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎来到区块链动物城！Niubi代币的世界！Niubi代币以中文口语中"牛逼"的强大含义为名，让我们引入一个令人兴奋的新成员 - Niubi！就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有Niubi的存在！Niubi代表着强大、无与伦比的能力，它是真正的“牛逼”代表。作为Niubi代币的持有者，您将成为这个城市中的动物英雄，共同推动数字货币的发展和创新。无论牛市还是熊市，Niubi代币都将引领潮流，展现真正的“牛逼”力量。加入我们！
+                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎来到区块链动物城！NIUBI代币的世界！NIUBI代币以中文口语中"牛逼"的强大含义为名，让我们引入一个令人兴奋的新成员 - NIUBI！就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有NIUBI的存在！NIUBI代表着强大、无与伦比的能力，它是真正的“牛逼”代表。作为NIUBI代币的持有者，您将成为这个城市中的动物英雄，共同推动数字货币的发展和创新。无论牛市还是熊市，NIUBI代币都将引领潮流，展现真正的“牛逼”力量。加入我们！
                      </p>
                     <p>
-                      ARB合约地址:&nbsp;xxxxxxxxxxxxx
+                      ARB合约地址:&nbsp;&nbsp;0x8e4Fa38f35752cB9aAB97a2ebE0bC12a36CC8f14
                     </p>
                     <p>
-                      代币符号：Niubi
+                      代币符号：NIUBI
                     </p>
                     <p>
                       代币小数：18
                     </p>
-                     <div class="btn-box">
-                      <a href="https://app.uniswap.org/#/swap/"  target="_blank" class="btn1">
+                     -- <div class="btn-box"> 
+                      <a href="https://app.sushi.com/zh_CN/swap"  target="_blank" class="btn1">
                         立即购买
                       </a>
                     </div>
@@ -219,7 +223,7 @@
           代币经济学
           </h2>
           <p>
-          总量：666,000,666,000
+          总量：111,000,000,000
           </p>
         </div>
         <div class="row">
@@ -230,7 +234,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                添加流动性 665,000,666,000
+                添加流动性 110,000,000,000
                 </h5>
                 <!-- <p>
                 添加 Uniswap  80,000,000,000
@@ -248,7 +252,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                空投 10亿，多余销毁
+                空投 大约10亿，多余销毁。
                 </h5>
                 <!-- <p> 
                 20,000,000,000
@@ -296,10 +300,10 @@
     <div class="container  ">
       <div class="heading_container heading_center">
         <h2>
-          <span>Niubi</span>
+          <span>NIUBI</span>
         </h2>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎来到区块链动物城，Niubi代币的世界！Niubi代币以中文口语中"牛逼"同音，中文"牛逼"是强大含义为名，这里是数字金融的奇妙之地！在这个充满活力和创新的城市中，每个角落都有令人瞩目的动物形象，而现在，该城市将迎来一个令人兴奋的新成员 - Niubi！就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有Niubi的存在！Niubi代表着强大、无与伦比的能力，它是区块链动物世界中真正的“牛逼”代表。Niubi的到来为动物城注入了新的活力和魅力。作为区块链动物城的一员，Niubi将与其他动物英雄们并肩作战，共同推动数字货币的发展和创新。Niubi代币将带给您无限的机会和无以伦比的成就感。作为Niubi代币的持有者，您将展现出真正的”牛逼”风采，与华尔街的荣耀相辅相成。在区块链动物城中，Niubi将成为一个象征着强大和稳健的存在。无论是在牛市还是熊市，Niubi代币都将引领数字货币的潮流，展现出真正的“牛逼”力量。加入我们的行列，成为Niubi代币的一员。在区块链动物城中，让我们共同展现我们的“牛逼”，共同创造一个令人瞩目的数字金融世界！
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎来到区块链动物城，NIUBI代币的世界！NIUBI代币以中文口语中"牛逼"同音，中文"牛逼"是强大含义为名，这里是数字金融的奇妙之地！在这个充满活力和创新的城市中，每个角落都有令人瞩目的动物形象，而现在，该城市将迎来一个令人兴奋的新成员 - NIUBI！就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有NIUBI的存在！NIUBI代表着强大、无与伦比的能力，它是区块链动物世界中真正的“牛逼”代表。NIUBI的到来为动物城注入了新的活力和魅力。作为区块链动物城的一员，NIUBI将与其他动物英雄们并肩作战，共同推动数字货币的发展和创新。NIUBI代币将带给您无限的机会和无以伦比的成就感。作为NIUBI代币的持有者，您将展现出真正的”牛逼”风采，与华尔街的荣耀相辅相成。在区块链动物城中，NIUBI将成为一个象征着强大和稳健的存在。无论是在牛市还是熊市，NIUBI代币都将引领数字货币的潮流，展现出真正的“牛逼”力量。加入我们的行列，成为NIUBI代币的一员。在区块链动物城中，让我们共同展现我们的“牛逼”，共同创造一个令人瞩目的数字金融世界！
         </p>
       </div>
       <div class="row">
@@ -770,8 +774,8 @@
 
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Niubi</a>
+        &copy; <span id="displayYear"></span>
+        <a href="https://html.design/">NIUBI</a>
       </p>
     </div>
   </section>
