--- a/index.html
+++ b/index.html
@@ -770,8 +770,10 @@
       <img src="images/twitter.png" alt="Twitter" width="64" height="64">
     </a >
     
-    
-
+    <p>
+     官方邮箱：admin@niubi.network
+    </p>
+   
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span>
