--- a/index.html
+++ b/index.html
@@ -761,6 +761,9 @@
   <!-- footer section -->
   
   <section class="footer_section">
+    <p>
+      联系我们
+    </p>
     <a href="https://t.me/Niubi_Official/" target="_blank">
       <img src="images/telegram.png" alt="Telegram" width="58" height="58">
     </a >
@@ -771,8 +774,14 @@
     </a >
     
     <p>
-     官方邮箱：admin@niubi.network
+      Email：admin@niubi.network
     </p>
+    <!-- <p> 
+     Twitter：https://twitter.com/Niubi_Official
+    </p>
+    <p>
+     Telegram：https://t.me/Niubi_Official
+    </p>-->
    
     <div class="container">
       <p>
