--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       NIUBI
                     </h1>
                     <p>
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎来到区块链动物城！NIUBI代币的世界！NIUBI代币以中文口语中"牛逼"的强大含义为名，让我们引入一个令人兴奋的新成员 - NIUBI！就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有NIUBI的存在！NIUBI代表着强大、无与伦比的能力，它是真正的“牛逼”代表。作为NIUBI代币的持有者，您将成为这个城市中的动物英雄，共同推动数字货币的发展和创新。无论牛市还是熊市，NIUBI代币都将引领潮流，展现真正的“牛逼”力量。加入我们！
+                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;社交平台牛必欢迎您！NIUBI是发行在ARB区块链上社交平台牛必的治理代币！NIUBI代币以中文口语中"牛逼"同音，代表强大含义为名。就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有NIUBI的存在！NIUBI代表着强大、无与伦比的能力，它是真正的“牛逼”代表。作为NIUBI代币的持有者，您将成为这个城市中的动物英雄，共同推动数字货币的发展和创新。无论牛市还是熊市，NIUBI代币都将引领潮流，展现真正的“牛逼”力量。加入我们！
                      </p>
                     <p>
                       ARB合约地址:&nbsp;&nbsp;0x8e4Fa38f35752cB9aAB97a2ebE0bC12a36CC8f14
@@ -122,8 +122,8 @@
                       代币小数：18
                     </p>
                      -- <div class="btn-box"> 
-                      <a href="https://app.sushi.com/zh_CN/swap"  target="_blank" class="btn1">
-                        立即购买
+                      <a href="https://github.com/gecoinnetwork/Niubi-/blob/ea5f80c18a7203492af03640aa6bf9a786b9db74/whitepaper.md"  target="_blank" class="btn1">
+                        白皮书
                       </a>
                     </div>
                     <div class="btn-box">
@@ -234,7 +234,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                添加流动性 110,000,000,000
+                添加流动性 100,000,000,000
                 </h5>
                 <!-- <p>
                 添加 Uniswap  80,000,000,000
@@ -252,7 +252,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                空投 大约10亿，多余销毁。
+                空投 大约110亿，多余销毁。
                 </h5>
                 <!-- <p> 
                 20,000,000,000
@@ -300,11 +300,11 @@
     <div class="container  ">
       <div class="heading_container heading_center">
         <h2>
-          <span>NIUBI</span>
+          <span> ABOUT NIUBI</span>
         </h2>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎来到区块链动物城，NIUBI代币的世界！NIUBI代币以中文口语中"牛逼"同音，中文"牛逼"是强大含义为名，这里是数字金融的奇妙之地！在这个充满活力和创新的城市中，每个角落都有令人瞩目的动物形象，而现在，该城市将迎来一个令人兴奋的新成员 - NIUBI！就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有NIUBI的存在！NIUBI代表着强大、无与伦比的能力，它是区块链动物世界中真正的“牛逼”代表。NIUBI的到来为动物城注入了新的活力和魅力。作为区块链动物城的一员，NIUBI将与其他动物英雄们并肩作战，共同推动数字货币的发展和创新。NIUBI代币将带给您无限的机会和无以伦比的成就感。作为NIUBI代币的持有者，您将展现出真正的”牛逼”风采，与华尔街的荣耀相辅相成。在区块链动物城中，NIUBI将成为一个象征着强大和稳健的存在。无论是在牛市还是熊市，NIUBI代币都将引领数字货币的潮流，展现出真正的“牛逼”力量。加入我们的行列，成为NIUBI代币的一员。在区块链动物城中，让我们共同展现我们的“牛逼”，共同创造一个令人瞩目的数字金融世界！
-        </p>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NIUBI是发行在ARB区块链上的社交牛必的治理代币：赋予每个人展示最"牛逼"一面的机会，在我们每个人的人生旅程中，都会有那么一刻，我们做出了令人惊叹的壮举，或是面对巨大的困难时超越自我。这个时刻是我们最自豪、最振奋人心的时刻，是我们真正展现出自己最牛逼一面的时刻。正因为如此，我们创建了 NIUBI 代币，这个名称灵感来自于中文的"牛逼"，代表着超越平凡、无与伦比的能力和勇气。NIUBI 代币是我们社交 DApp 中的治理代币，旨在激励和奖励社区中的每个用户分享他们最牛逼的一件事。我们相信每个人都是独一无二的，都有自己的故事、成就和经历。而社交平台的真正价值在于提供一个安全、支持性的环境，让每个人自信地展示他们在生活中最引人注目的时刻。NIUBI 代币的使命是鼓励用户积极参与社交平台，并奖励他们勇于分享他们的故事。通过这个平台，用户可以发布文字、图片、视频或其他形式的内容，展示他们的成就、创意、挑战和突破。社区成员可以通过点赞、评论或其他方式对这些故事进行互动和支持。通过NIUBI代币，我们希望创造一个充满鼓励、正能量和互动的社交环境。每个用户都有机会在这里成为他们自己的英雄，鼓励他人，并与其他社区成员分享他们的故事。我们相信，当人们积极分享和欣赏彼此的最牛逼时刻时，我们的社区将充满活力、创造力和共同成长。
+          </p>
       </div>
       <div class="row">
         <div class="col-md-6 ">
@@ -351,24 +351,34 @@
           </div>
           <div class="detail-box">
             <h5>
-             第一步
-            </h5>
+              阶段一：平台搭建和代币发行
+              </h5>
             <p>
-            共识起来，先出圈，再规划。
+              - 搭建社交DApp平台的基础架构和用户界面。
+            </p>
+            <p>
+              - 进行代币的合约开发和发布。
+            </p>
+            <p>
+              - 进行初期的市场推广和用户招募。
             </p>
           </div>
         </div>
-        <!-- <div class="box"> 
+         <div class="box"> 
           <div class="img-box">
             <img src="images/w2.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
-              第二阶段
-            </h5>
+              阶段二：功能丰富和用户增长
+           </h5>
             <p>
-              规划中
+              - 添加更多的功能和交互特性，以提升用户体验和吸引力。
+           </p>
+            <p>
+              - 扩大用户基础，通过市场推广、社交媒体营销和合作伙伴关系等手段增加用户数量。
             </p>
+
           </div>
         </div>
         <div class="box">
@@ -377,11 +387,15 @@
           </div>
           <div class="detail-box">
             <h5>
-             第三阶段
-            </h5>
+              阶段三：社区治理和参与增强
+           </h5>
             <p>
-              规划中
+              - 引入治理机制，使代币持有者能够参与社区决策和治理过程。
             </p>
+            <p>
+              - 提供更多的社区参与机会，如举办线上线下活动、举办竞赛和奖励计划等。
+            </p>
+            
           </div>
         </div>
         <div class="box">
@@ -390,15 +404,37 @@
           </div>
           <div class="detail-box">
             <h5>
-              第四阶段
-            </h5>
+              阶段四：生态系统扩展和合作伙伴关系
+           </h5>
             <p>
-              规划中
+              - 探索与其他项目和平台的合作伙伴关系，以促进生态系统的扩大和互相受益。
+           </p>
+            <p>
+              - 支持与其他项目的互操作性，如跨链交互、资产互换等。
             </p>
           </div>
         </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/w5.png" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              阶段五：社交DApp生态的持续发展
+           </h5>
+            <p>
+              - 持续改进和优化社交DApp平台的功能和性能。
+            </p>
+            <p>
+              - 不断扩大用户基础，并加强社区参与和治理的力度。
+            </p>
+            <p>
+              - 寻求新的增长机会和创新，保持与市场的步调和用户需求的同步。
+             </p>
+          </div>
+        </div>
       </div>
-      <div class="btn-box">
+      <!-- <div class="btn-box">
         <a href="https://app.uniswap.org/#/swap/" target="_blank">
           立即购买
         </a>
@@ -408,7 +444,7 @@
 
   <!-- end why section -->
 
-  <!-- team section 
+  team section 
   <section class="team_section layout_padding">
     <div class="container-fluid">
       <div class="heading_container heading_center">
@@ -422,17 +458,17 @@
           <div class="col-lg-3 col-sm-6">
             <div class="box ">
               <div class="img-box">
-                <img src="images/team-1.jpg" class="img1" alt="">
+                <img src="images/team-1.png" class="img1" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Joseph Brown
+                  JIAYONG
                 </h5>
                 <p>
-                  Marketing Head
+                  Founder
                 </p>
               </div>
-              <div class="social_box">
+              <!-- <div class="social_box"> 
                 <a href="#">
                   <i class="fa fa-facebook" aria-hidden="true"></i>
                 </a>
@@ -448,23 +484,23 @@
                 <a href="#">
                   <i class="fa fa-youtube-play" aria-hidden="true"></i>
                 </a>
-              </div>
+              </div>-->
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="box ">
               <div class="img-box">
-                <img src="images/team-2.jpg" class="img1" alt="">
+                <img src="images/team-2.png" class="img1" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Nancy White
+                  FUBING YING
                 </h5>
                 <p>
-                  Marketing Head
+                  Technical Director
                 </p>
               </div>
-              <div class="social_box">
+              <!-- <div class="social_box"> 
                 <a href="#">
                   <i class="fa fa-facebook" aria-hidden="true"></i>
                 </a>
@@ -480,23 +516,23 @@
                 <a href="#">
                   <i class="fa fa-youtube-play" aria-hidden="true"></i>
                 </a>
-              </div>
+              </div>-->
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="box ">
               <div class="img-box">
-                <img src="images/team-3.jpg" class="img1" alt="">
+                <img src="images/team-3.png" class="img1" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Earl Martinez
+                  TONIE
                 </h5>
                 <p>
-                  Marketing Head
+                  Chief Financial Officer (CFO)
                 </p>
               </div>
-              <div class="social_box">
+              <!-- <div class="social_box"> 
                 <a href="#">
                   <i class="fa fa-facebook" aria-hidden="true"></i>
                 </a>
@@ -512,23 +548,23 @@
                 <a href="#">
                   <i class="fa fa-youtube-play" aria-hidden="true"></i>
                 </a>
-              </div>
+              </div>-->
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="box ">
               <div class="img-box">
-                <img src="images/team-4.jpg" class="img1" alt="">
+                <img src="images/team-4.png" class="img1" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Josephine Allard
+                  FENG
                 </h5>
                 <p>
-                  Marketing Head
+                  Chief Operating Officer (COO)
                 </p>
               </div>
-              <div class="social_box">
+              <!-- <div class="social_box">
                 <a href="#">
                   <i class="fa fa-facebook" aria-hidden="true"></i>
                 </a>
@@ -544,13 +580,13 @@
                 <a href="#">
                   <i class="fa fa-youtube-play" aria-hidden="true"></i>
                 </a>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section> -->
+  </section> 
   <!--end team section -->
 
 
