--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
   <!-- end why section -->
 
-  team section 
+  <!--team section -->
   <section class="team_section layout_padding">
     <div class="container-fluid">
       <div class="heading_container heading_center">
@@ -462,7 +462,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  JIAYONG
+                 Jia
                 </h5>
                 <p>
                   Founder
@@ -494,10 +494,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  FUBING YING
+                  FU
                 </h5>
                 <p>
-                  Technical Director
+                  technology development
                 </p>
               </div>
               <!-- <div class="social_box"> 
@@ -526,10 +526,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  TONIE
+                  TONNI
                 </h5>
                 <p>
-                  Chief Financial Officer (CFO)
+                  marketing manager
                 </p>
               </div>
               <!-- <div class="social_box"> 
@@ -558,10 +558,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  FENG
+                  Yu
                 </h5>
                 <p>
-                  Chief Operating Officer (COO)
+                  marketing manager
                 </p>
               </div>
               <!-- <div class="social_box">
@@ -810,7 +810,7 @@
     </a >
     
     <p>
-      Email：admin@niubi.network
+      Official Email：admin@niubi.network
     </p>
     <!-- <p> 
      Twitter：https://twitter.com/Niubi_Official
