--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> NIUBI</title>
+  <title> NB</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -56,7 +56,7 @@
                 ">
               </span>  
               <span>
-                NIUBI
+                NB
               </span> 
 
           </a>
@@ -107,16 +107,16 @@
                 <div class="col-md-6 ">
                   <div class="detail-box">
                     <h1>
-                      NIUBI
+                      NB
                     </h1>
                     <p>
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;社交平台牛必欢迎您！NIUBI是发行在ARB区块链上社交平台牛必的治理代币！NIUBI代币以中文口语中"牛逼"同音，代表强大含义为名。就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有NIUBI的存在！NIUBI代表着强大、无与伦比的能力，它是真正的“牛逼”代表。作为NIUBI代币的持有者，您将成为这个城市中的动物英雄，共同推动数字货币的发展和创新。无论牛市还是熊市，NIUBI代币都将引领潮流，展现真正的“牛逼”力量。加入我们！
+                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NB欢迎您！NB是发行在BSC区块链上社交平台牛必的治理代币！NB代币以中文口语中"牛逼"同音，代表强大含义为名。就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有NB的存在！NB代表着强大、无与伦比的能力，它是真正的“牛逼”代表。作为NB代币的持有者，您将成为这个城市中的动物英雄，共同推动数字货币的发展和创新。无论牛市还是熊市，NB代币都将引领潮流，展现真正的“牛逼”力量。加入我们！
                      </p>
                     <p>
-                      ARB合约地址:&nbsp;&nbsp;0x8e4Fa38f35752cB9aAB97a2ebE0bC12a36CC8f14
+                      BSC合约地址:&nbsp;&nbsp;0x8e4Fa38f35752cB9aAB97a2ebE0bC12a36CC8f14
                     </p>
                     <p>
-                      代币符号：NIUBI
+                      代币符号：NB
                     </p>
                     <p>
                       代币小数：18
@@ -127,12 +127,12 @@
                       </a>
                     </div>
                     <div class="btn-box">
-                      <a href="https://t.me/Niubi_Official/" target="_blank" class="btn1">
+                      <a href="https://t.me/NiubiOfficial/" target="_blank" class="btn1">
                         Telegram
                       </a>
                     </div>
                     <div class="btn-box">
-                      <a href="https://twitter.com/Niubi_Official/" target="_blank" class="btn1">
+                      <a href="https://twitter.com/NiubiOfficial/" target="_blank" class="btn1">
                         Twitter
                       </a>
                     </div>
@@ -223,7 +223,7 @@
           代币经济学
           </h2>
           <p>
-          总量：111,000,000,000
+          总量：100,000,000,000
           </p>
         </div>
         <div class="row">
@@ -234,7 +234,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                添加流动性 100,000,000,000
+                添加流动性 90,000,000,000
                 </h5>
                 <!-- <p>
                 添加 Uniswap  80,000,000,000
@@ -252,7 +252,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                空投 大约110亿，多余销毁。
+                空投 大约100亿，多余销毁。
                 </h5>
                 <!-- <p> 
                 20,000,000,000
@@ -300,10 +300,10 @@
     <div class="container  ">
       <div class="heading_container heading_center">
         <h2>
-          <span> ABOUT NIUBI</span>
+          <span> ABOUT NB</span>
         </h2>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NIUBI是发行在ARB区块链上的社交牛必的治理代币：赋予每个人展示最"牛逼"一面的机会，在我们每个人的人生旅程中，都会有那么一刻，我们做出了令人惊叹的壮举，或是面对巨大的困难时超越自我。这个时刻是我们最自豪、最振奋人心的时刻，是我们真正展现出自己最牛逼一面的时刻。正因为如此，我们创建了 NIUBI 代币，这个名称灵感来自于中文的"牛逼"，代表着超越平凡、无与伦比的能力和勇气。NIUBI 代币是我们社交 DApp 中的治理代币，旨在激励和奖励社区中的每个用户分享他们最牛逼的一件事。我们相信每个人都是独一无二的，都有自己的故事、成就和经历。而社交平台的真正价值在于提供一个安全、支持性的环境，让每个人自信地展示他们在生活中最引人注目的时刻。NIUBI 代币的使命是鼓励用户积极参与社交平台，并奖励他们勇于分享他们的故事。通过这个平台，用户可以发布文字、图片、视频或其他形式的内容，展示他们的成就、创意、挑战和突破。社区成员可以通过点赞、评论或其他方式对这些故事进行互动和支持。通过NIUBI代币，我们希望创造一个充满鼓励、正能量和互动的社交环境。每个用户都有机会在这里成为他们自己的英雄，鼓励他人，并与其他社区成员分享他们的故事。我们相信，当人们积极分享和欣赏彼此的最牛逼时刻时，我们的社区将充满活力、创造力和共同成长。
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NB是发行在BSC区块链上的社交牛必的治理代币：赋予每个人展示最"牛逼"一面的机会，在我们每个人的人生旅程中，都会有那么一刻，我们做出了令人惊叹的壮举，或是面对巨大的困难时超越自我。这个时刻是我们最自豪、最振奋人心的时刻，是我们真正展现出自己最牛逼一面的时刻。正因为如此，我们创建了NB代币，这个名称灵感来自于中文的"牛逼"，代表着超越平凡、无与伦比的能力和勇气。NB 代币是我们社交 DApp 中的治理代币，旨在激励和奖励社区中的每个用户分享他们最牛逼的一件事。我们相信每个人都是独一无二的，都有自己的故事、成就和经历。而社交平台的真正价值在于提供一个安全、支持性的环境，让每个人自信地展示他们在生活中最引人注目的时刻。NB 代币的使命是鼓励用户积极参与社交平台，并奖励他们勇于分享他们的故事。通过这个平台，用户可以发布文字、图片、视频或其他形式的内容，展示他们的成就、创意、挑战和突破。社区成员可以通过点赞、评论或其他方式对这些故事进行互动和支持。通过NB代币，我们希望创造一个充满鼓励、正能量和互动的社交环境。每个用户都有机会在这里成为他们自己的英雄，鼓励他人，并与其他社区成员分享他们的故事。我们相信，当人们积极分享和欣赏彼此的最牛逼时刻时，我们的社区将充满活力、创造力和共同成长。
           </p>
       </div>
       <div class="row">
@@ -800,12 +800,12 @@
     <p>
       联系我们
     </p>
-    <a href="https://t.me/Niubi_Official/" target="_blank">
+    <a href="https://t.me/NiubiOfficial/" target="_blank">
       <img src="images/telegram.png" alt="Telegram" width="58" height="58">
     </a >
     
     <span>&nbsp;&nbsp;</span> <!-- 在图标之间添加一些空白间距 -->
-    <a href="https://twitter.com/Niubi_Official/" target="_blank">
+    <a href="https://twitter.com/NiubiOfficial/" target="_blank">
       <img src="images/twitter.png" alt="Twitter" width="64" height="64">
     </a >
     
