--- a/index.html
+++ b/index.html
@@ -110,20 +110,20 @@
                       NB
                     </h1>
                     <p>
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NB欢迎您！NB是发行在BSC区块链上社交平台牛必的治理代币！NB代币以中文口语中"牛逼"同音，代表强大含义为名。就像华尔街有铜牛代表金融中心一样，区块链动物城也必须有NB的存在！NB代表着强大、无与伦比的能力，它是真正的“牛逼”代表。作为NB代币的持有者，您将成为这个城市中的动物英雄，共同推动数字货币的发展和创新。无论牛市还是熊市，NB代币都将引领潮流，展现真正的“牛逼”力量。加入我们！
-                     </p>
+                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Welcome to NB! NB is the governance token issued on the social platform Niubi on the BSC blockchain! NB token is named after the homonym of "Niubi" in spoken Chinese, which means powerful. Just like Wall Street has a copper bull to represent the financial center, the blockchain animal city must also have the existence of NB! NB stands for powerful and incomparable ability, it is a real representative of "Awesome". As a holder of NB tokens, you will become an animal hero in this city, and jointly promote the development and innovation of digital currency. Regardless of the bull market or the bear market, NB tokens will lead the trend and show the real "beautiful" power. join us!
+                     </p> 
                     <p>
-                      BSC合约地址:&nbsp;&nbsp;0x505EA7da41bEaC51AAa360128c392144E80539C5
+                      BSC contract address:&nbsp;&nbsp;0x505EA7da41bEaC51AAa360128c392144E80539C5
                     </p>
                     <p>
-                      代币符号：NB
+                      token symbol：NB
                     </p>
                     <p>
-                      代币小数：18
+                      token decimal：18
                     </p>
                      -- <div class="btn-box"> 
-                      <a href="https://github.com/gecoinnetwork/Niubi-/blob/ea5f80c18a7203492af03640aa6bf9a786b9db74/whitepaper.md"  target="_blank" class="btn1">
-                        白皮书
+                      <a href="https://github.com/gecoinnetwork/NB/blob/main/NB.md"  target="_blank" class="btn1">
+                        white paper
                       </a>
                     </div>
                     <div class="btn-box">
@@ -220,10 +220,10 @@
       <div class="container ">
         <div class="heading_container heading_center">
           <h2>
-          代币经济学
+          Token Economics
           </h2>
           <p>
-          总量：100,000,000,000
+          Total：100,000,000,000
           </p>
         </div>
         <div class="row">
@@ -234,7 +234,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                添加流动性 90,000,000,000
+                Add liquidity 90,000,000,000
                 </h5>
                 <!-- <p>
                 添加 Uniswap  80,000,000,000
@@ -252,7 +252,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                空投 大约100亿，多余销毁。
+                The airdrop is about 10 billion, and the excess will be destroyed.
                 </h5>
                 <!-- <p> 
                 20,000,000,000
@@ -270,7 +270,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                买卖税 1%
+                sales tax 1%
                 </h5>
                 <!--<p>
                 买卖1%税用于后期团队运营。
@@ -303,9 +303,9 @@
           <span> ABOUT NB</span>
         </h2>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NB是发行在BSC区块链上的社交牛必的治理代币：赋予每个人展示最"牛逼"一面的机会，在我们每个人的人生旅程中，都会有那么一刻，我们做出了令人惊叹的壮举，或是面对巨大的困难时超越自我。这个时刻是我们最自豪、最振奋人心的时刻，是我们真正展现出自己最牛逼一面的时刻。正因为如此，我们创建了NB代币，这个名称灵感来自于中文的"牛逼"，代表着超越平凡、无与伦比的能力和勇气。NB 代币是我们社交 DApp 中的治理代币，旨在激励和奖励社区中的每个用户分享他们最牛逼的一件事。我们相信每个人都是独一无二的，都有自己的故事、成就和经历。而社交平台的真正价值在于提供一个安全、支持性的环境，让每个人自信地展示他们在生活中最引人注目的时刻。NB 代币的使命是鼓励用户积极参与社交平台，并奖励他们勇于分享他们的故事。通过这个平台，用户可以发布文字、图片、视频或其他形式的内容，展示他们的成就、创意、挑战和突破。社区成员可以通过点赞、评论或其他方式对这些故事进行互动和支持。通过NB代币，我们希望创造一个充满鼓励、正能量和互动的社交环境。每个用户都有机会在这里成为他们自己的英雄，鼓励他人，并与其他社区成员分享他们的故事。我们相信，当人们积极分享和欣赏彼此的最牛逼时刻时，我们的社区将充满活力、创造力和共同成长。
-          </p>
-      </div>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NB is a socially powerful governance token issued on the BSC blockchain: it gives everyone the opportunity to show the most "beautiful" side. In each of our life journeys, there will be a moment when we make amazing feats or surpass ourselves in the face of great difficulties. This moment is our proudest, most inspiring moment, the moment when we really show our best self. Because of this, we created the NB token, a name inspired by the Chinese word for "niubi", which represents unparalleled ability and courage beyond the ordinary. NB token is the governance token in our social DApp, designed to motivate and reward every user in the community to share their best thing. We believe everyone is unique, with their own stories, accomplishments and experiences. And the real value of social platforms is in providing a safe, supportive environment where everyone can confidently showcase their most compelling moments in life. The mission of NB Token is to encourage users to actively participate in social platforms and reward them for being brave enough to share their stories. Through this platform,Users can post text, pictures, videos or other forms of content to showcase their achievements, ideas, challenges and breakthroughs. Community members can interact and support these stories by liking, commenting, or otherwise. Through NB tokens, we hope to create a social environment full of encouragement, positive energy and interaction. Every user has the opportunity to be their own hero here, to encourage others, and to share their stories with other community members. We believe that when people actively share and appreciate each other's best moments, our community is energized, creative and grows together.
+        </p>
+        </div>
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
@@ -341,7 +341,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          路线图
+          route map
         </h2>
       </div>
       <div class="why_container">
@@ -351,16 +351,16 @@
           </div>
           <div class="detail-box">
             <h5>
-              阶段一：平台搭建和代币发行
+              Phase 1: Platform Construction and Token Issuance
               </h5>
             <p>
-              - 搭建社交DApp平台的基础架构和用户界面。
+              - Build the infrastructure and user interface of the social DApp platform.
             </p>
             <p>
-              - 进行代币的合约开发和发布。
+              - Conduct contract development and release of tokens.
             </p>
             <p>
-              - 进行初期的市场推广和用户招募。
+             - Carry out initial marketing and user recruitment.
             </p>
           </div>
         </div>
@@ -370,13 +370,13 @@
           </div>
           <div class="detail-box">
             <h5>
-              阶段二：功能丰富和用户增长
+              Phase 2: Feature enrichment and user growth
            </h5>
             <p>
-              - 添加更多的功能和交互特性，以提升用户体验和吸引力。
+              - Add more functions and interactive features to improve user experience and attractiveness.
            </p>
             <p>
-              - 扩大用户基础，通过市场推广、社交媒体营销和合作伙伴关系等手段增加用户数量。
+              - Expand the user base and increase the number of users through marketing, social media marketing and partnerships.
             </p>
 
           </div>
@@ -387,13 +387,13 @@
           </div>
           <div class="detail-box">
             <h5>
-              阶段三：社区治理和参与增强
+              Phase 3: Enhanced Community Governance and Participation
            </h5>
             <p>
-              - 引入治理机制，使代币持有者能够参与社区决策和治理过程。
+              - Introducing a governance mechanism that enables token holders to participate in community decision-making and governance processes.
             </p>
             <p>
-              - 提供更多的社区参与机会，如举办线上线下活动、举办竞赛和奖励计划等。
+             - Provide more opportunities for community participation, such as holding online and offline events, holding competitions and reward programs, etc.
             </p>
             
           </div>
@@ -404,13 +404,13 @@
           </div>
           <div class="detail-box">
             <h5>
-              阶段四：生态系统扩展和合作伙伴关系
+              Phase Four: Ecosystem Expansion and Partnerships
            </h5>
             <p>
-              - 探索与其他项目和平台的合作伙伴关系，以促进生态系统的扩大和互相受益。
+              - Explore partnerships with other projects and platforms to facilitate ecosystem expansion and mutual benefit.
            </p>
             <p>
-              - 支持与其他项目的互操作性，如跨链交互、资产互换等。
+              - Support interoperability with other projects, such as cross-chain interaction, asset swap, etc.
             </p>
           </div>
         </div>
@@ -420,16 +420,16 @@
           </div>
           <div class="detail-box">
             <h5>
-              阶段五：社交DApp生态的持续发展
+              Stage 5: Sustainable Development of Social DApp Ecology
            </h5>
             <p>
-              - 持续改进和优化社交DApp平台的功能和性能。
+              - Continuously improve and optimize the functions and performance of the social DApp platform.
             </p>
             <p>
-              - 不断扩大用户基础，并加强社区参与和治理的力度。
+              - Continuously expand user base and strengthen community participation and governance.
             </p>
             <p>
-              - 寻求新的增长机会和创新，保持与市场的步调和用户需求的同步。
+             - Seeking new growth opportunities and innovations, keeping pace with the pace of the market and user needs.
              </p>
           </div>
         </div>
@@ -798,7 +798,7 @@
   
   <section class="footer_section">
     <p>
-      联系我们
+      Contact us
     </p>
     <a href="https://t.me/NiubiOfficial/" target="_blank">
       <img src="images/telegram.png" alt="Telegram" width="58" height="58">
