--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cn">
+<html lang="en">
 
 <head>
   <!-- Basic -->
@@ -811,6 +811,9 @@
     
     <p>
       Official Email：admin@niubi.network
+    </p>
+    <p>
+     Business Email：Niubiserve@gmail.com
     </p>
     <!-- <p> 
      Twitter：https://twitter.com/Niubi_Official
