--- a/index.html
+++ b/index.html
@@ -12,19 +12,11 @@
             src: url('fonts/fontawesome-webfont.ttf') format('truetype'),
                  url('fonts/fontawesome-webfont.woff') format('woff'),
                  url('fonts/fontawesome-webfont.woff2') format('woff2');
-            /* Add more font formats if needed */
+            /* 如有需要，可以添加更多字体格式 */
         }
 
-        /* Rest of your CSS styles here */
+        /* 其他 CSS 样式在这里添加 */
 
-        body, html {
-            /* Your styles */
-        }
-
-        /* Other styles and media queries */
-
-    </style>
-    <style>
         body, html {
             height: 100%;
             margin: 0;
@@ -45,38 +37,57 @@
             z-index: 1;
         }
 
-        .center-image {
-            max-width: 66.6667vw; /* 屏幕的三分之二宽度 */
-            height: 33.3333vh; /* 屏幕的三分之一高度 */
-            display: block;
-            margin: auto;
+        .center-image-container {
+            width: 75%; /* 图片宽度为屏幕宽度的四分之三 */
+            height: 66.67%; /* 图片高度为屏幕高度的三分之二 */
+            position: relative;
             z-index: 0;
+        }
+
+        .center-image {
+            max-width: 100%;
+            max-height: 100%;
+            display: block;
+            margin: 0 auto; /* 图片水平居中 */
         }
 
         .buttons {
             display: flex;
             justify-content: center;
             margin-top: 20px;
+            position: absolute;
+            bottom: 20px; /* 将按钮放置在页面底部 */
         }
 
         .button-icon {
-            width: 100px;
-            height: 100px;
+            width: 100px; /* 按钮图标宽度为100px */
+            height: auto; /* 保持原始纵横比 */
+            max-width: 100%; /* 按钮图标宽度最大为按钮容器宽度 */
+            max-height: 100%; /* 按钮图标高度最大为按钮容器高度 */
             margin: 10px;
         }
 
         /* 自适应调整样式 */
         @media (max-width: 768px) {
-            .center-image {
-                max-width: 80vw;
+            .center-image-container {
+                width: 80vw;
                 height: 40vh;
+            }
+
+            .button-icon {
+                width: 70px; /* 在768px以下的设备上，按钮图标宽度为70px */
             }
         }
 
         @media (max-width: 480px) {
-            .center-image {
-                max-width: 90vw;
+            .center-image-container {
+                width: 90vw;
                 height: 45vh;
+                margin-top: 25%; /* 在480px以下的设备上，将图片放置在下面的三个按钮与页面顶部位置的中间 */
+            }
+
+            .button-icon {
+                width: 60px; /* 在480px以下的设备上，按钮图标宽度为60px */
             }
         }
     </style>
@@ -85,16 +96,24 @@
     <div class="logo">
         <img src="img/logo.png" alt="Logo" width="180" height="180">
     </div>
-    <img class="center-image" src="img/juzhong.png" alt="Centered Image">
+
+    <div class="center-image-container">
+        <img class="center-image" src="img/juzhong.png" alt="Centered Image">
+    </div>
+
     <div class="buttons">
-        <a href="https://bscscan.com/token/0x505EA7da41bEaC51AAa360128c392144E80539C5">
+        <a href="https://www.binance.com/zh-CN/" target="_blank">
+            <img class="button-icon" src="img/bian.png" alt="Button 1">
+        </a>
+        <a href="https://bscscan.com/token/0x505EA7da41bEaC51AAa360128c392144E80539C5/" target="_blank">
             <img class="button-icon" src="img/bsc.png" alt="Button 1">
         </a>
-        <a href="https://twitter.com/NiubiOfficial/">
+        <a href="https://twitter.com/NiubiOfficial/" target="_blank">
             <img class="button-icon" src="img/twitter.png" alt="Button 2">
         </a>
-        <a href="https://t.me/NiubiOfficial/">
+        <a href="https://t.me/NiubiOfficial/" target="_blank">
             <img class="button-icon" src="img/telegram.png" alt="Button 3">
+        </a>
     </div>
 </body>
-</html
+</html>
