--- a/index.html
+++ b/index.html
@@ -102,8 +102,11 @@
     </div>
 
     <div class="buttons">
-        <a href="https://www.binance.com/zh-CN/" target="_blank">
-            <img class="button-icon" src="img/bian.png" alt="Button 1">
+        <a href="https://www.dextools.io/app/cn/bnb/pair-explorer/0x2b7c703b7433938ff4bc6d96721de04f60ec2220/" target="_blank">
+            <img class="button-icon" src="img/dextool.png" alt="Button 1">
+        </a>
+        <a href="https://pancakeswap.finance/swap?outputCurrency=0x505EA7da41bEaC51AAa360128c392144E80539C5" target="_blank">
+            <img class="button-icon" src="img/cake.png" alt="Button 1">
         </a>
         <a href="https://bscscan.com/token/0x505EA7da41bEaC51AAa360128c392144E80539C5/" target="_blank">
             <img class="button-icon" src="img/bsc.png" alt="Button 1">
