--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
                         <nav class="cover-navigation cover-navigation--primary">
                             <ul class="navigation">
                                 <li class="navigation__item">
-                                    <a href="https://x.com/brc20rats666/status/1722396928347115684?s=46"
+                                    <a href="https://x.com/BTC_rats/"
                                        target="_blank" class="blog-button">
-                                        <div>推特</div>
+                                        <div>X</div>
                                     </a>
                                 </li>
                                 <li class="navigation__item">
                                     <!--<a onclick="update()" class="blog-button">-->
                                     <a href="https://t.me/ratsCN"
                                        target="_blank" class="blog-button">
-                                        <div>电报</div>
+                                        <div>Telegram</div>
                                     </a>
                                 </li>
 <!--                                <li class="navigation__item">-->
@@ -102,9 +102,9 @@
                                     </a>
                                 </li>
                                 <li class="navigation__item">
-                                    <a href="https://x.com/brc20rats666/status/1722396928347115684?s=46" title="Twitter" target="_blank">
+                                    <a href="https://x.com/BTC_rats" title="X" target="_blank">
                                         <i class="fab fa-twitter"></i>
-                                        <span class="label">Twitter</span>
+                                        <span class="label">X</span>
                                     </a>
                                 </li>
 <!--                                <li class="navigation__item">-->
