--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
     <div class="buttons">
         
         </a>
-        <a href="https://twitter.com/Devx3_official/" target="_blank">
+        <a href="https://twitter.com/Devx3_ai/" target="_blank">
             <img class="button-icon" src="img/twitter.png" alt="Button 2">
         </a>
-        <a href="https://t.me/Devx3official" target="_blank">
+        <a href="https://t.me/Devx3ai" target="_blank">
             <img class="button-icon" src="img/telegram.png" alt="Button 3">
         </a>
     </div>
